Refactor chat data structures and handling; update Chat and ChatMapper to support null values for name and imgUrl; enhance chat name and image retrieval logic; modify mock data structure; improve chat initialization in PopulateChatsService.